Actualizacion de Archivos

--- a/about.html
+++ b/about.html
@@ -24,58 +24,41 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item "> <a class="nav-link" href="./index.html">Inicio <span
-                            class="sr-only">(current)</span></a></li>
-                <li class="nav-item"> <a class="nav-link" href="./about.html">Nosotros</a></li>
+                <li class="nav-item "> <a class="nav-link" href="./index.html">Inicio <span class="sr-only">(current)</span></a></li>
+                <li class="nav-item active"> <a class="nav-link" href="#">Nosotros</a></li>
                 <li class="nav-item"> <a class="nav-link" href="./menu.html">Menu</a></li>
-                <li class="nav-item active"> <a class="nav-link" href="#">Galeria</a></li>
+                <li class="nav-item"> <a class="nav-link" href="./galeria.html">Galeria</a></li>
                 <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
     <div class="jumbotron-seccion">
-        <h1><img src="img/icon-taco-256.png" width="64" height="64"  alt="logo"/> Taqueria, Tacos Perry!</h1>
+            <h1><img src="img/icon-taco-256.png" width="64" height="64"  alt="logo"/> Taqueria, Tacos Perry!</h1>
     </div>
     <!-- container -->
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.html"> <span class="oi oi-home"></span>&nbsp; Inicio</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">Galeria</li>
+              <li class="breadcrumb-item"><a href="./index.html"> <span class="oi oi-home"></span>&nbsp; Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
             </ol>
-        </nav>
-        <div class="d-flex flex-wrap flex-row-reverse">
-            <div class="card-design d-flex flex-column">
-                <img src="img/burrito.jpg" alt="..." class="img-thumbnail"></div>
-            <div class=" card-design d-flex flex-column">
-                <img src="img/otros.jpg" alt="..." class="img-thumbnail"></div>
-            <div class="card-design d-flex flex-column">
-                <img src="img/panchos.jpg" alt="..." class="img-thumbnail"></div>
-            <div class="card-design d-flex flex-column">
-                <img src="img/quesadilla.jpg" alt="..." class="img-thumbnail"></div>
-            <div class="card-design d-flex flex-column">
-                <img src="img/tacos.jpg" alt="..." class="img-thumbnail"></div>
-            <div class="card-design d-flex flex-column">
-                <img src="img/tostada.jpg" alt="..." class="img-thumbnail"></div>
-        </div>
+          </nav>
+        <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet risus a nisi viverra tempor non ut mi. Cras congue tristique augue sit amet blandit. Etiam a leo at leo vestibulum scelerisque eget et diam. Aenean lacinia sit amet arcu sit amet dictum. Mauris sagittis libero ipsum, a sollicitudin nunc scelerisque ac. In euismod sem vitae ornare auctor. Aenean venenatis mi sit amet diam aliquet gravida. Donec accumsan mi lectus, ut fringilla ex fringilla in.
+        </span>
     </div> <!-- /container -->
     <footer>
         <div class="row">
             <div class="col-sm-4 d-flex flex-column" style="font-size:larger;">
-                <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook-official"
-                        aria-hidden="true"></i>
+                <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i>
                     Facebook</a>
-                <a href="http://www.instagram.com" target="_blank"> <i class="fa fa-instagram" aria-hidden="true"></i>
-                    Instagram</a>
-                <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>
-                    Twtter</a>
+                <a href="http://www.instagram.com" target="_blank"> <i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+                <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twtter</a>
             </div>
             <div class="col-sm-4">
                 <address>
                     <h5>Nuestra Ubicación</h5>
-                    <div><span class="oi oi-map-marker footer-address-icon"></span> Calle Bilbao esquina con Bogota
-                    </div>
+                    <div><span class="oi oi-map-marker footer-address-icon"></span> Calle Bilbao esquina con Bogota</div>
                     <div><span class="oi oi-map footer-address-icon"></span> Nuevo Laredo, Tamaulipas, Mexico</div>
                     <div><span class="oi oi-phone footer-address-icon"></span> (867) 710-9090</div>
                 </address>
